Remove empty appenders to avoid extra margins

--- a/packages/block-editor/src/components/block-list-appender/style.scss
+++ b/packages/block-editor/src/components/block-list-appender/style.scss
@@ -32,3 +32,7 @@
 		transform: scale(0);
 	}
 }
+
+.block-list-appender:empty {
+	display: none;
+}
